--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,6 @@
 server.port=8090
+
+# DataBase
+spring.datasource.url=jdbc:postgresql://localhost:5432/kruger-todo-test
+spring.datasource.username=postgres
+spring.datasource.password=7147
